<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
          
  
  
  
  <modelVersion>4.0.0</modelVersion>
          
  
  
  
  <groupId>dev.catalogue</groupId>
          
  
  
  
  <artifactId>topologycatalogue</artifactId>
          
  
  
  
  <version>0.0.1-SNAPSHOT</version>
          
  
  
  
  <packaging>pom</packaging>
          
  
  
  
  <name>topologycatalogue</name>
        
  
  
  
  <modules>
                  
    
    
    
    <module>domain</module>
                  
    
    
    
    <module>application</module>
              
    
    
    <module>framework</module>
          
    
    <module>bootstrap</module>
      
  </modules>
          
  
  
  <properties>
                    
    
    
    <maven.compiler.source>11</maven.compiler.source>
                    
    
    
    <maven.compiler.target>11</maven.compiler.target>
                    
    
    
    <surefire-plugin.version>2.22.1</surefire-plugin.version>
                    
    
    
    <lombok.version>1.18.20</lombok.version>
                    
    
    
    <testcontainers.version>1.15.3</testcontainers.version>
    <quarkus-plugin.version>2.2.1.Final</quarkus-plugin.version>
    <quarkus.package.type>uber-jar</quarkus.package.type>
    <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
    <quarkus.platform.version>2.2.1.Final</quarkus.platform.version>
              
    
    
    <junit-jupiter.version>5.7.2</junit-jupiter.version>
                    
    
    <mockito.version>3.10.0</mockito.version>
                
  	
    <cucumber.version>6.10.4</cucumber.version>
      
  </properties>
          
  
  
  <dependencies>
     <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>         
    
    
    <dependency>
                              
      
      
      <groupId>org.projectlombok</groupId>
                              
      
      
      <artifactId>lombok</artifactId>
                              
      
      
      <version>${lombok.version}</version>
                              
      
      
      <scope>compile</scope>
                          
    
    
    </dependency>
                    
    
    
    <dependency>
                              
      
      
      <groupId>org.junit.platform</groupId>
                              
      
      
      <artifactId>junit-platform-surefire-provider</artifactId>
                              
      
      
      <version>1.1.0</version>
                          
    
    
    </dependency>
                    
    
    
    <dependency>
                              
      
      
      <groupId>org.junit.jupiter</groupId>
                              
      
      
      <artifactId>junit-jupiter-engine</artifactId>
                              
      
      
      <version>5.1.0</version>
                          
    
    
    </dependency>
                
  
  
  </dependencies>
          
  
  
  <build>
                    
    
    
    <plugins>
             <plugin>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
      </plugin>                 
        <plugin>
        <groupId>org.jboss.jandex</groupId>
        <artifactId>jandex-maven-plugin</artifactId>
        <version>1.0.7</version>
        <executions>
          <execution>
            <id>make-index</id>
            <goals>
              <goal>jandex</goal>
            </goals>
            <phase>
              compile
            </phase>
          </execution>
        </executions>
        <configuration>
          <fileSets>
            <fileSet>
              <directory>${project.build.directory}/generated-classes/foo</directory>
            </fileSet>
            <fileSet>
              <directory>${project.build.directory}/generated-classes/bar</directory>
            </fileSet>
          </fileSets>
        </configuration>
      </plugin>
      
      <plugin>
                                        
        
        
        <groupId>org.apache.maven.plugins</groupId>
                                        
        
        
        <artifactId>maven-compiler-plugin</artifactId>
                                        
        
        
        <version>3.8.1</version>
                                        
        
        
        <configuration>
                                                  
          
          
          <source>11</source>
                                                  
          
          
          <target>11</target>
                                                  
          
          
          <annotationProcessorPaths>
                                                            
            
            
            <path>
                                                                      
              
              
              <groupId>org.projectlombok</groupId>
                                                                      
              
              
              <artifactId>lombok</artifactId>
                                                                      
              
              
              <version>${lombok.version}</version>
                                                                  
            
            
            </path>
                                                        
          
          
          </annotationProcessorPaths>
                                              
        
        
        </configuration>
                                    
      
      
      </plugin>
                              
      
      
      <plugin>
                                        
        
        
        <groupId>org.apache.maven.plugins</groupId>
                                        
        
        
        <artifactId>maven-jar-plugin</artifactId>
                                        
        
        
        <version>3.1.2</version>
                                        
        
        
        <configuration>
                                                  
          
          
          <archive>
                                                            
            
            
            <manifest>
                                                                      
              
              
              <mainClass>dev.catalogue.App</mainClass>
                                                                  
            
            
            </manifest>
                                                        
          
          
          </archive>
                                              
        
        
        </configuration>
                                    
      
      
      </plugin>
                              
      
      
      <plugin>
                                        
        
        
        <groupId>org.apache.maven.plugins</groupId>
                                        
        
        
        <artifactId>maven-surefire-plugin</artifactId>
                                        
        
        
        <version>2.22.1</version>
                                        
        
        
        <configuration>
                                                  
          
          
          <argLine>
                        --illegal-access=permit
                    </argLine>
                                              
        
        
        </configuration>
                                    
      
      
      </plugin>
                              
      
      
      <plugin>
                                        
        
        
        <groupId>org.apache.maven.plugins</groupId>
                                        
        
        
        <artifactId>maven-failsafe-plugin</artifactId>
                                        
        
        
        <version>2.22.1</version>
                                        
        
        
        <configuration>
                                                  
          
          
          <argLine>
                        --illegal-access=permit
                    </argLine>
                                              
        
        
        </configuration>
                                    
      
      
      </plugin>
                              
      
      
      <plugin>
                                        
        
        
        <groupId>org.apache.maven.plugins</groupId>
                                        
        
        
        <artifactId>maven-jar-plugin</artifactId>
                                        
        
        
        <version>2.4</version>
                                        
        
        
        <configuration>
                                                  
          
          
          <archive>
                                                            
            
            
            <manifest>
                                                                      
              
              
              <mainClass>dev.catalogue.App</mainClass>
                                                                  
            
            
            </manifest>
                                                        
          
          
          </archive>
                                              
        
        
        </configuration>
                                    
      
      
      </plugin>
                          
    
    
    </plugins>
                
  
  
  </build>
      <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>${surefire-plugin.version}</version>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <systemPropertyVariables>
                    <native.image.path>${project.basedir}/bootstrap/target/bootstrap-1.0-SNAPSHOT-runner</native.image.path>
                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    <maven.home>${maven.home}</maven.home>
                  </systemPropertyVariables>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


</project>
